# jl

./: .gitmodules  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  circular_buffer.cpp  copy.cpp  crc.cpp  curl.cpp  eigen.cpp  fixed_string.cpp  math.cpp  mmap.cpp  random.cpp  ring_buffer.cpp  ring_index.cpp  span.cpp  splice.cpp  strings.cpp  time.cpp  unique_socket.cpp
include/: jl.h  jl_curl.h  jl_db.h  jl_eigen.h  jl_posix.h
test/: CMakeLists.txt  bit_test.cpp  circular_buffer_test.cpp  curl_test.cpp  environment_test.cpp  errno_as_error_test.cpp  error_handling_test.cpp  fd_mmap_test.cpp  misc_test.cpp  ring_buffer_test.cpp  ring_test.cpp  rows_test.cpp  rw_loop_test.cpp  span_test.cpp  stats_test.cpp  strings_test.cpp  synchronization_test.cpp  test.cpp  time_test.cpp  tmpfd_test.cpp  tmpfile_test.cpp  unique_addr_test.cpp  unique_fd_test.cpp  unique_mmap_test.cpp  unique_socket_test.cpp  vectors_test.cpp
test/curl/: curl_test.cpp
test/db/: mock_test.cpp  mock_test.h  psql_test.cpp  sqlite_test.cpp
test/eigen/: eigen_test.cpp
test/posix/: circular_buffer_test.cpp  fd_mmap_test.cpp  unique_addr_test.cpp  unique_fd_test.cpp  unique_mmap_test.cpp  unique_socket_test.cpp
